--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "fastclick": "^1.0.6",
+    "vue-lazyload": "1.0.3",
+    "axios": "^0.16.1",
     "better-scroll": "^0.1.15",
     "jsonp": "0.2.1"
   },
@@ -30,6 +32,7 @@
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "babel-polyfill": "^6.0.0",
+    "body-parser": "^1.18.2",
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
