--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-runtime": "^6.0.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
+    "vuex": "^2.3.1",
     "fastclick": "^1.0.6",
     "vue-lazyload": "1.0.3",
     "axios": "^0.16.1",
