--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "babel-runtime": "^6.0.0",
-    "vue": "^2.5.2",
-    "vue-router": "^3.0.1",
-    "vuex": "^2.3.1",
-    "fastclick": "^1.0.6",
-    "vue-lazyload": "1.0.3",
     "axios": "^0.16.1",
+    "babel-runtime": "^6.0.0",
     "better-scroll": "^0.1.15",
-    "jsonp": "0.2.1"
+    "create-keyframe-animation": "^0.1.0",
+    "fastclick": "^1.0.6",
+    "jsonp": "0.2.1",
+    "vue": "^2.5.2",
+    "vue-lazyload": "1.0.3",
+    "vue-router": "^3.0.1",
+    "vuex": "^2.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
