--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
   "dependencies": {
     "axios": "^0.16.1",
     "babel-runtime": "^6.0.0",
-    "better-scroll": "^0.1.15",
+    "better-scroll": "^1.6.0",
     "create-keyframe-animation": "^0.1.0",
     "fastclick": "^1.0.6",
     "jsonp": "0.2.1",
+    "js-base64": "^2.1.9",
     "vue": "^2.5.2",
     "vue-lazyload": "1.0.3",
     "vue-router": "^3.0.1",
@@ -33,7 +34,7 @@
     "babel-plugin-transform-vue-jsx": "^3.5.0",
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
-    "babel-polyfill": "^6.0.0",
+    "babel-polyfill": "^6.2.0",
     "body-parser": "^1.18.2",
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
