--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "better-scroll": "^1.6.0",
     "create-keyframe-animation": "^0.1.0",
     "fastclick": "^1.0.6",
-    "jsonp": "0.2.1",
     "js-base64": "^2.1.9",
+    "jsonp": "0.2.1",
+    "lyric-parser": "^1.0.1",
     "vue": "^2.5.2",
     "vue-lazyload": "1.0.3",
     "vue-router": "^3.0.1",
