--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "axios": "^0.16.1",
+    "axios": ">=0.21.1",
     "babel-runtime": "^6.0.0",
     "better-scroll": "^1.6.0",
     "create-keyframe-animation": "^0.1.0",
@@ -55,7 +55,7 @@
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
-    "node-notifier": "^5.1.2",
+    "node-notifier": ">=8.0.1",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
@@ -73,8 +73,8 @@
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.6.0",
-    "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "^2.9.1",
+    "webpack-bundle-analyzer": ">=3.3.2",
+    "webpack-dev-server": ">=3.1.11",
     "webpack-merge": "^4.1.0",
     "vconsole": "^2.5.2"
   },
